Fix broken css

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,17 +1,3 @@
 body {
   margin-top:20px;
 }
-
-.well {
-  padding :0;
-}
-
-[class*="span"] {
-  float: left;
-  min-height: 1px;
-  margin-left: 18px;
-}
-
-H1 {
-  margin-bottom: 20px;
-}
